# btc_descriptor

./: CMakeLists.txt  copilot-instructions.md  package.xml
example/: place_recognition.cpp
include/: CustomMsg.h  CustomPoint.h  btc.h  utils.h
launch/: place_recognition.launch.py
src/: btc.cpp  utils.cpp
test/: btc_test.cpp
